--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -4,3 +4,33 @@
     text-align: center;
     padding: 20px;
 }
+
+.lds-dual-ring {
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid rgb(168, 21, 21);
+    border-color: rgb(156, 13, 13) transparent rgb(172, 11, 11) transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
