--- a/src/components/SiteNavbar/SiteNavbar.scss
+++ b/src/components/SiteNavbar/SiteNavbar.scss
@@ -1,6 +1,10 @@
+body {
+    background-color: #f1f1f1;
+}
+
 .navbar {
     height: 100px;
-    background-color: #161616;
+    background-color: #8338EC;
 
 
     a {
@@ -16,5 +20,17 @@
 
     a {
         color: #161616;
+    }
+}
+
+.headerRight {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+
+    h5 {
+        color: #fff;
     }
 }
