--- a/src/components/LoginScreen/LoginScreen.scss
+++ b/src/components/LoginScreen/LoginScreen.scss
@@ -1,7 +1,7 @@
 .login-screen {
     width: 100%;
     height: 100vh;
-    background-color: #78ccb0;
+    background-color: #8338EC;
     display: flex;
     justify-content: center;
     align-items: center;
