--- a/src/components/RegisterScreen/RegisterScreen.scss
+++ b/src/components/RegisterScreen/RegisterScreen.scss
@@ -1,13 +1,13 @@
 .login-screen {
     width: 100%;
     height: 100vh;
-    background-color: #78ccb0;
+    background-color: #8338EC;
     display: flex;
     justify-content: center;
     align-items: center;
 
     .login {
-        width: 600px;
+        width: 400px;
         padding: 30px;
         border-radius: 10px;
         background-color: #fff;
